--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 
   <properties>
     <java.version>1.8</java.version>
+    <skip.integration.tests>true</skip.integration.tests>
   </properties>
 
   <dependencies>
@@ -70,9 +71,18 @@
     <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
-      <scope>runtime</scope>
+      <scope>test</scope>
     </dependency>
   </dependencies>
+
+  <profiles>
+    <profile>
+      <id>integration-tests</id>
+      <properties>
+        <skip.integration.tests>false</skip.integration.tests>
+      </properties>
+    </profile>
+  </profiles>
 
   <build>
     <plugins>
@@ -108,6 +118,7 @@
       </plugin>
 
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>2.19.1</version>
         <dependencies>
@@ -139,7 +150,7 @@
           <includes>
             <include>**/*IT.java</include>
           </includes>
-          <skipITs>false</skipITs>
+          <skipITs>${skip.integration.tests}</skipITs>
         </configuration>
         <executions>
           <execution>
