--- a/pom.xml
+++ b/pom.xml
@@ -73,6 +73,12 @@
       <artifactId>h2</artifactId>
       <scope>test</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-crypto</artifactId>
+      <version>5.1.2.RELEASE</version>
+    </dependency>
   </dependencies>
 
   <profiles>
