--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.datasource.url=jdbc:mariadb://localhost:3306/testspringboot?useUnicode=tr
 spring.datasource.username=springuser
 spring.datasource.password=PassWord123
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB10Dialect
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
